# navax

./: .gitmodules  Dockerfile  start.sh
src/jackal_navigation/: CMakeLists.txt
src/jackal_navigation/launch/: depthimage_to_laserscan.launch  mapping.launch  navigation.launch
src/jackal_navigation/params/: base_local_planner_params.yaml  config.rviz  costmap_common_params.yaml
src/jackal_navigation/params/odom_nav_params/: global_costmap_params.yaml
src/mapping3d/: CMakeLists.txt  package.xml
src/mapping3d/launch/: mapping.launch
src/mapping3d/scripts/: nav4d.py  navigation_manager.py  rover_regulator.py  rover_supervisor.py
